[gd_scene load_steps=6 format=3 uid="uid://bfslnkfo64ob0"]

[ext_resource type="PackedScene" uid="uid://b56i4ptcci7qf" path="res://Game/Vehicles/Player/Car.glb" id="1_iq3dp"]
[ext_resource type="Script" path="res://Game/Vehicles/Player/player.gd" id="1_sxx5v"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y61ds"]
size = Vector3(2.13573, 1.50517, 4.34964)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_otpoh"]
height = 2.15426
radius = 0.344381

[sub_resource type="BoxShape3D" id="BoxShape3D_j6rg4"]
size = Vector3(2.853, 2.275, 5.645)

[node name="Player" groups=["Player"] instance=ExtResource("1_iq3dp")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.733, 0)
script = ExtResource("1_sxx5v")

[node name="chassis" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.2263e-08, 0.037331, -0.383097)

[node name="wheel_front_right" parent="." index="1"]
transform = Transform3D(0, 0.149825, 0, -0.350282, 0, 0, 0, 0, 0.350282, -1.00035, -0.390251, 1.1978)

[node name="wheel_back_right" parent="." index="2"]
transform = Transform3D(0, 0.149825, 0, -0.350282, 0, 0, 0, 0, 0.350282, -1.00035, -0.390251, -1.9671)

[node name="front_lights" parent="." index="3"]
transform = Transform3D(0.165893, 0, 0, 0, 0.0651428, 0, 0, 0, 0.0376292, 0.785742, 0.0841635, 1.7962)

[node name="mirrors" parent="." index="4"]
transform = Transform3D(0.165893, 0, 0, 0, 0.0651428, 0, 0, 0, 0.0376292, 1.20138, 0.310797, 0.503723)

[node name="back_lights" parent="." index="5"]
transform = Transform3D(0.165893, 0, 0, 0, 0.0651428, 0, 0, 0, 0.0376292, 0.785742, 0.0841635, -2.40545)

[node name="wheel_front_left" parent="." index="6"]
transform = Transform3D(0, 0.149825, 0, -0.350282, 0, 0, 0, 0, 0.350282, 0.92407, -0.390251, 1.1978)

[node name="wheel_back_left" parent="." index="7"]
transform = Transform3D(0, 0.149825, 0, -0.350282, 0, 0, 0, 0, 0.350282, 0.92407, -0.390251, -1.9671)

[node name="Body" type="CollisionShape3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.280827, -0.323738)
shape = SubResource("BoxShape3D_y61ds")

[node name="FrontWheels" type="CollisionShape3D" parent="." index="9"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.395, 1.194)
shape = SubResource("CylinderShape3D_otpoh")

[node name="FrontWheels2" type="CollisionShape3D" parent="." index="10"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -3.53893e-10, -0.395, -1.97095)
shape = SubResource("CylinderShape3D_otpoh")

[node name="Area3D" type="Area3D" parent="." index="11"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(0.775679, 0, 0, 0, 0.775679, 0, 0, 0, 0.775679, 2.83434e-08, 0.17113, -0.32421)
shape = SubResource("BoxShape3D_j6rg4")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
